src/pages/styles/WelcomePage.module.scss
.wrapper {
  display: flex;
  justify-content: center;
  gap: 100px;
  background-repeat: no-repeat;
  background-position: right 10px bottom 30px;
  height: calc(100vh - 141px);
}

.leftContainer {
  max-width: 500px;
  display: flex;
  flex-direction: column;
  gap: 50px;
}

.rightContainer {
  background-color: var(--module-background-color);
  padding: 20px;
  border-radius: 17px;
  transition: box-shadow 0.2s ease-in;
  width: 390px;
}
.rightContainer:hover {
  box-shadow: var(--hover-box-shadow);
}

.leftContainer,
.rightContainer {
  height: fit-content;
  align-self: center;
}

.logo {
  width: fit-content;
}

.linkButton {
  display: inline;
  border: 0px;
  background-color: transparent;
  font-size: 15px;
  text-decoration: underline;
  color: #ff0000;
  cursor: pointer;
}

@media screen {
}

